cmake_minimum_required(VERSION 3.21)
project(Cpp)

set(CMAKE_CXX_STANDARD 14)

include_directories(codechef)
include_directories(dp)
include_directories(dp/codeforces/binarySearch)

add_executable(Cpp
        codechef/Abc.cpp
        codechef/battery.cpp
        codechef/beautifulMatricx.cpp
        codechef/beautifulMatricx.h
        codechef/subarrayPermutation.cpp
        codechef/subset.cpp
        codechef/tempCodeRunnerFile.cpp
        dp/codeforces/binarySearch/luvbinary.cpp
        dp/codeforces/binarySearch/luvbinary.h
        dp/codeforces/minority.cpp
        dp/stacksandQueus/findPeakelemnt.cpp
        dp/stacksandQueus/implementQueue.cpp
        dp/stacksandQueus/nextgreater.cpp
        dp/01knapsack.cpp
        dp/AvoidMaximums.cpp
        dp/badminton.cpp
        dp/cc3.cpp
        dp/cc3.h
        dp/ccv.cpp
        dp/chefandnextgen.cpp
        dp/chess.cpp
        dp/climbingStairs.cpp
        dp/contest.cpp
        dp/corona.cpp
        dp/countcycle.cpp
        dp/countdivisible.cpp
        dp/dd.cpp
        dp/diceecombination.cpp
        dp/Div7.cpp
        dp/doublylinkedllist.cpp
        dp/dutchnationalfalg.cpp
        dp/evmHacking.cpp
        dp/fib.cpp
        dp/floodfill.cpp
        dp/FrogJump.cpp
        dp/generateAllParenthesis.cpp
        dp/generateparenthesis.cpp
        dp/hostelrooms.cpp
        dp/introdp.cpp
        dp/lazysalesman.cpp
        dp/lazysalesman.h
        dp/listnode.cpp
        dp/ltime.cpp
        dp/main.cpp
        dp/main.h
        dp/map.cpp
        dp/merge.cpp
        dp/MInimizesubarraysum.cpp
        dp/Minority.cpp
        dp/mm.cpp
        dp/mm.h
        dp/notebook.cpp
        dp/oddswapsort.cpp
        dp/ountDigit.cpp
        dp/peacefulparty.cpp
        dp/positve.cpp
        dp/prev.cpp
        dp/reverselinkedlist.cpp
        dp/revrsestack.cpp
        dp/ruppe.cpp
        dp/sets.cpp
        dp/slidingWindow.cpp
        dp/sortingpaths.cpp
        dp/subarraysum.cpp
        dp/tempCodeRunnerFile.cpp
        dp/traversaltree.cpp
        dp/trees.cpp
        dp/treesandgraphs.cpp
        dp/xorpalindrome.cpp
        "graphs/constructive algo/bit++.cpp"
        graphs/recursion/permutation.cpp
        graphs/recursion/ratinamaze.cpp
        graphs/dfs.cpp
        stl/isSubsequence.cpp
        stl/linked.cpp
        stl/minstack.cpp
        stl/multiply.cpp
        stl/printrepeatedString.cpp
        stl/ReverseLinkedlist.cpp
        stl/sorts.cpp
        stl/st.cpp
        stl/tempCodeRunnerFile.cpp
        trees/maxdepth.cpp
        Backtracking.cpp
        Bobbodechef.cpp
        chaat.cpp
        Chefandmutable.cpp
        CombinationSum.cpp
        DEcimaltoBInary.cpp
        DetectLoop.cpp
        duplicate.cpp
        equalmex.cpp
        fortunetelling.cpp
        houseRobber.cpp
        Linkedlist.cpp
        liss.cpp
        loongestincresing.cpp
        midd.cpp
        newVariable.cpp
        Nqueen.cpp
        pascalsTriangle.cpp
        pattern.cpp
        pointsandlines.cpp
        polycarp.cpp
        Precomputation.cpp
        precomutation.cpp
        prefixSum.cpp
        printAllPermutation.cpp
        rever.cpp
        setmatrixzero.cpp
        SetZeros.cpp
        sort.cpp
        sorteven.cpp
        String.cpp
        stspan.cpp
        subsequences.cpp
        tempCodeRunnerFile.cpp
        vector.cpp)
