cmake_minimum_required(VERSION 3.22)
project(stringcpp)

set(CMAKE_CXX_STANDARD 14)

add_executable(stringcpp
        checkforanagram.cpp
        findequilibriu,Point.cpp
        leftmostrepeatingelement.cpp
        minDistancetoTheTarget.cpp
        naivePatternSearchong.cpp
        nonRepeatingCharater.cpp
        overviewOFPatternSearching.cpp
        prefixSum.cpp
        reverseastring.cpp
        reversestringOptimize.cpp
        slidingwindow.cpp
        tempCodeRunnerFile.cpp)
